--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
     branches: [main, master, develop]
 
 jobs:
-  test:
+  # Core package
+  test-core:
     runs-on: ubuntu-latest
     
     strategy:
@@ -26,28 +27,98 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
-    - name: Run linting
-      run: npm run lint
+    - name: Build core package
+      run: npm run build:core
     
-    - name: Run type checking
-      run: npm run typecheck
+    - name: Run core tests
+      run: npm run test:core
     
-    - name: Run tests
-      run: npm run test:coverage
+    - name: Run core linting
+      run: npm run lint -w packages/core
     
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage/lcov.info
-        fail_ci_if_error: false
-    
-    - name: Build project
-      run: npm run build
+    - name: Run core type checking
+      run: npm run typecheck -w packages/core
 
+  # CLI package (depends on core)
+  test-cli:
+    runs-on: ubuntu-latest
+    needs: test-core
+    
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Build dependencies (core)
+      run: npm run build:core
+    
+    - name: Build CLI package
+      run: npm run build:cli
+    
+    - name: Run CLI tests
+      run: npm run test:cli
+    
+    - name: Run CLI linting
+      run: npm run lint -w packages/cli
+    
+    - name: Run CLI type checking
+      run: npm run typecheck -w packages/cli
+
+
+  # Security audit
   security:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
     - name: Run security audit
       run: npm audit --audit-level=high
+
+  # Integration test (all packages together)
+  integration:
+    runs-on: ubuntu-latest
+    needs: [test-core, test-cli]
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Build all packages
+      run: npm run build
+    
+    - name: Run all tests
+      run: npm run test
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./packages/*/coverage/lcov.info
+        fail_ci_if_error: false
