--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,7 +14,8 @@
     "./config": "./dist/config/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy-assets",
+    "copy-assets": "cp -r assets dist/",
     "dev": "tsc --watch",
     "test": "jest",
     "test:coverage": "jest --coverage",
