Revert "use break mp3"
This reverts commit bc5817516916f9efd309274025bb14ba34899ab1.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,8 +14,7 @@
     "./config": "./dist/config/index.js"
   },
   "scripts": {
-    "build": "tsc && npm run copy-assets",
-    "copy-assets": "cp -r assets dist/",
+    "build": "tsc",
     "dev": "tsc --watch",
     "test": "jest",
     "test:coverage": "jest --coverage",
